[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "26.1.0"

# OpenZeppelin Stellar contracts — pinned exactly; the library is pre-1.0.
stellar-access = "=0.7.2"
stellar-contract-utils = "=0.7.2"
stellar-macros = "=0.7.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
