[package]
name = "space-object"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
# `hazmat-address` exposes `Address::to_payload`, the SDK's cross-chain-interop
# API for extracting an address's raw 32-byte payload (see `address_bytes`).
soroban-sdk = { workspace = true, features = ["hazmat-address"] }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
