[package]
name = "zk-oracle"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-macros = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Generate real Groth16/BN254 proofs in tests to exercise the accept path.
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
